# AdvancedGoogleSearchDev

./: README.md  main.py  manager.py  pyproject.toml
browsermanage/: browseropen.py
