[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["AdvaitThePro <advaitthepro@gmail.com>"]
description = ""
name = "advancedgooglesearch"
version = "0.1.0-Alpha"
[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
autopep8 = "^1.6.0"
[tool.poetry.dev-dependencies]
